manifests/miniflux/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend
spec:
  parentRefs:
    - name: gateway-envoy
      namespace: gateway
  hostnames:
    - "miniflux.wcfm.me"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: miniflux
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
