manifests/miniflux/miniflux.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miniflux
  namespace: miniflux
spec:
  selector:
    matchLabels:
      app: miniflux
  replicas: 1
  template:
    metadata:
      labels:
        app: miniflux
    spec:
      containers:
        - name: miniflux
          image: miniflux/miniflux:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: miniflux
  namespace: miniflux
  labels:
    app: miniflux
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: miniflux
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: miniflux
spec:
  rules:
    - host: "miniflux.wcfm.me"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: miniflux
                port:
                  number: 80

  # tls:
  # - hosts:
  #   - "miniflux.wcfm.me"
  #   secretName: miniflux-tls
